--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,5 @@
-# Large data files (>50MB)
-Master_Cleaned_Retail_Data.csv
-cleaned_retail_data.csv
-cleaned_retail_data_2011.csv
-online_retail_data.csv
-
-# Excel files (often large)
-*.xlsx
+# Large data files are now handled by Git LFS
+# No need to exclude them anymore
 
 # Temporary files
 *.tmp
